Fix Bug 163978 - Kontact name disappears from composer titlebar when

subjects last word is Kontact
FIXED-IN: 4.8.1
BUG: 163978